[gd_scene load_steps=8 format=3 uid="uid://c55s0tmcletaj"]

[ext_resource type="Script" path="res://scripts/campaign_fight.gd" id="1_3iac4"]
[ext_resource type="PackedScene" uid="uid://dk80ss5idciud" path="res://Scenes/Playable/Fight_Base.tscn" id="2_dnsdk"]
[ext_resource type="Texture2D" uid="uid://dild5ufjiuvtw" path="res://resources/sprites/Header/HP-Bar-Top.png" id="3_6qd30"]
[ext_resource type="Texture2D" uid="uid://bn8xidkk2f4b2" path="res://resources/sprites/Header/HP-Bar-Progress.png" id="4_uwnrh"]
[ext_resource type="Texture2D" uid="uid://dxmueg4qdwgdo" path="res://resources/sprites/clock-bg.png" id="5_21awv"]
[ext_resource type="Texture2D" uid="uid://bnmr0g7juuo55" path="res://resources/sprites/clock-top.png" id="6_n0x1v"]
[ext_resource type="Texture2D" uid="uid://dsf8y5jpj3jg8" path="res://resources/sprites/clock-fill.png" id="7_8nxyx"]

[node name="Campaign" type="Node"]
script = ExtResource("1_3iac4")

[node name="FightBase" parent="." instance=ExtResource("2_dnsdk")]

[node name="player" parent="FightBase" index="2"]
z_index = 1
z_as_relative = false
position = Vector2(328, 536)

[node name="enemy" parent="FightBase" index="3"]
z_as_relative = false
position = Vector2(1044, 456)

[node name="TextureRect" parent="FightBase/CanvasLayer" index="0"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HPbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 138.0
offset_top = 18.0
offset_right = 1118.0
offset_bottom = 58.0
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 100
stretch_margin_right = 100
texture_over = ExtResource("3_6qd30")
texture_progress = ExtResource("4_uwnrh")

[node name="HP" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.477
anchor_top = 0.022
anchor_right = 0.477
anchor_bottom = 0.022
offset_left = -397.56
offset_top = 20.16
offset_right = -277.56
offset_bottom = 57.16
theme_override_colors/font_color = Color(0.941176, 0.870588, 0.0862745, 1)
theme_override_font_sizes/font_size = 30
text = "HP: "

[node name="TimeLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1133.0
offset_top = 139.0
offset_right = 1253.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Time: "

[node name="TimerSprite" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 1139.0
offset_top = 12.0
offset_right = 1267.0
offset_bottom = 140.0
scale = Vector2(4, 4)
fill_mode = 4
texture_under = ExtResource("5_21awv")
texture_over = ExtResource("6_n0x1v")
texture_progress = ExtResource("7_8nxyx")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="AudioTimer" type="AudioStreamPlayer" parent="."]

[connection signal="start" from="FightBase" to="." method="_on_fight_base_start"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="FightBase"]
[editable path="FightBase/enemy"]
[editable path="FightBase/enemy/Hurtbox"]
